// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`publish execute calls createOrReplace with _revision_lock_pseudo_field_ if there is an already published document 1`] = `
Object {
  "listen": Array [],
  "observable": Object {
    "action": Array [
      Object {
        "actions": Object {
          "actionType": "sanity.action.document.publish",
          "draftId": "drafts.my-id",
          "ifDraftRevisionId": "exampleRev",
          "ifPublishedRevisionId": "exampleRev",
          "publishedId": "my-id",
        },
        "options": Object {
          "tag": "document.publish",
        },
      },
    ],
    "fetch": Array [],
    "getDocuments": Array [],
    "listen": Array [],
    "request": Array [],
  },
  "request": Array [],
  "transaction": Array [],
}
`;

exports[`publish execute removes the \`_updatedAt\` field 1`] = `
Object {
  "listen": Array [],
  "observable": Object {
    "action": Array [
      Object {
        "actions": Object {
          "actionType": "sanity.action.document.publish",
          "draftId": "drafts.my-id",
          "ifDraftRevisionId": "exampleRev",
          "ifPublishedRevisionId": undefined,
          "publishedId": "my-id",
        },
        "options": Object {
          "tag": "document.publish",
        },
      },
    ],
    "fetch": Array [],
    "getDocuments": Array [],
    "listen": Array [],
    "request": Array [],
  },
  "request": Array [],
  "transaction": Array [],
}
`;

exports[`publish execute takes in any and strengthens references where _strengthenOnPublish is true 1`] = `
Object {
  "listen": Array [],
  "observable": Object {
    "action": Array [
      Object {
        "actions": Object {
          "actionType": "sanity.action.document.publish",
          "draftId": "drafts.my-id",
          "ifDraftRevisionId": "exampleRev",
          "ifPublishedRevisionId": undefined,
          "publishedId": "my-id",
        },
        "options": Object {
          "tag": "document.publish",
        },
      },
    ],
    "fetch": Array [],
    "getDocuments": Array [],
    "listen": Array [],
    "request": Array [],
  },
  "request": Array [],
  "transaction": Array [],
}
`;

exports[`publish execute throws an error if the client has no draft snaphot 1`] = `
Object {
  "listen": Array [],
  "observable": Object {
    "action": Array [],
    "fetch": Array [],
    "getDocuments": Array [],
    "listen": Array [],
    "request": Array [],
  },
  "request": Array [],
  "transaction": Array [],
}
`;
